--- a/escom-bpm-web/src/main/webapp/resources/css/icons.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/icons.css
@@ -46,6 +46,7 @@
 
 .ico_doc-16{background-image: url('../resources/icon/document-16.png') !important;}
 .ico_16_inspector{background-image: url('../resources/icon/inspector.png') !important;}
+.ico_importance-16{background-image: url('../resources/icon/importance-16.png')!important;}
 .ico_doc16 {background-image: url('../resources/icon/doc16.png') !important;}
 .ico_exit16 {background-image: url('../resources/icon/exit-16.png') !important;}
 .ico_enter16 {background-image: url('../resources/icon/enter-16.png') !important;}
