--- a/escom-bpm-web/src/main/webapp/view/templ/templ-frm.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-frm.xhtml
@@ -14,7 +14,7 @@
             var formHeight = 0;
             
             window.onresize = function(){
-                formWidth  = window.innerWidth;
+                formWidth  = window.innerWidth + 5;
                 formHeight = window.innerHeight;
                 return null;
             };                   
