--- a/escom-bpm-web/src/main/webapp/view/processes/types/processtype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/types/processtype-explorer.xhtml
@@ -1,8 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui"
-                template="/view/templ/templ-explorer.xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                template="/view/templ/templ-explorer.xhtml">
 
     <!-- стандарный обозреватель/селектор -->
     
@@ -23,9 +21,6 @@
     
     <!-- специфичные поля таблицы обозревателя -->
     <ui:define name="specDetailColumns"> 
-        <p:column headerText="#{bundle.TermApproval}" width="60" priority="3" >
-             <h:outputLabel value="#{''.concat(item.termHours).concat(' ').concat(bundle.HourShort)}"/>                            
-        </p:column>
     </ui:define>
 
 </ui:composition>
